2004-09-29 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc, gui/gui_menu.cc, gui/gui_src_asm.cc, 
	src/modules.h, src/modules.cc, src/processor.cc,
	src/pic-processor.cc, src/pic-processor.h, src/trace.h
	plat/win32/gpsim.def: Clean ups to get the Windows
	port to compile.
	
2004-09-29 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_asm.cc, src/pic-instructions.cc: Uninitialized variables
	in the instruction class were causing the source browser to
	place objects beyond the range allocated to the source browser.
	This confused GTK+ 2.x.
	
2004-09-28 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, gui/gui_menu.cc, gui/gui_object.cc, 
	gui/gui_object.h, gui/gui_regwin.cc, gui/gui_src.h,
	gui/gui_src_asm.cc, src/gpsim_interface.h, M src/interface.cc:
	- Fixed a few bugs caused by upgrading to GTK+ 2.x:
	  -- Window state was not being saved
	  -- Register window font was fouled up
	  -- Source browser pixel position calculations are different
          There are still some other bugs that need to be fixed: 
	  -- The breadboard window somehow prevents the Source browser
	     window from opening
	  -- <control>Q no longer quits
	  -- scrolling in source browser only works if the scroll pane
	     has focus
	  -- The register window cheats in guessing character width.

2004-09-24 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc: save_state() was skipping address 0.
	* src/registers.cc: Bit string encoding has been enhanced
	
2004-09-15 Scott Dattalo <scott@dattalo.com>
	* gui/gui_regwin.h, gui/gui_regwin.cc: max allowable registers
	is 64k (used to be 4k)
	* gui/gui_src_asm.cc: improperly initialized instructions were
	causing a core dump.

2004-09-19 Borut Razem <borut.razem@siol.net>
	* configure.in: gpsim is configured to link with GTK+ 2.x by default.
	  Use --enable-gtk1 for linking with GTK+ 1.x (deprecated).

2004-09-15 Scott Dattalo <scott@dattalo.com>
	* gui/gui_regwin.cc, gui/gui_src_asm.cc: Fixed ranging checks.
